test/benchdata/dir/11-service.yaml
# Monitoring services: LoadBalancer + NodePort
apiVersion: v1
kind: Service
metadata:
  name: grafana-lb
  namespace: monitoring-ns
spec:
  type: LoadBalancer
  selector:
    app: grafana
  ports:
    - port: 80
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-nodeport
  namespace: monitoring-ns
spec:
  type: NodePort
  selector:
    app: prometheus
  ports:
    - port: 9090
      targetPort: 9090
      nodePort: 30090
